# libopenshot

./: .build.sh  .bzrignore  .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .project  .travis.apt.yml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  INSTALL.md  README  README.md  appveyor.yml  codecov.yml  iwyu.txt  mac.xml  org.openshot.libopenshot.nuspec.in  test.sh  version.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  stale.yml
.github/workflows/: ci.yml  label-merge-conflicts.yml  label.yml  reuse.yml
.reuse/: dep5
appveyor/: build-libopenshot-audio.bat  build-unittest-cpp.bat
bindings/: CMakeLists.txt
bindings/java/: CMakeLists.txt  openshot.i
bindings/python/: CMakeLists.txt  openshot.i
bindings/ruby/: CMakeLists.txt  openshot.i  test.rb
cmake/: Config.cmake.in  scan-mac-libs.sh
cmake/Modules/: CodeCoverage.cmake  FindBlackMagic.cmake  FindFFmpeg.cmake  FindGTK2.cmake  FindJack.cmake  FindJsonCpp.cmake  FindJuce.cmake  FindOpenShotAudio.cmake  FindPythonLibs.cmake  FindRESVG.cmake  FindResvg.cmake  FindUnitTest++.cmake  FindZMQ.cmake  FindZeroMQ.cmake  Findbabl.cmake  Findjsoncpp.cmake  JUCE_CMakeLists.txt  UnitTest++_CMakeLists.txt  UseDoxygen.cmake
cmake/Python/: __init__.py
cmake/Windows/: README  build-imagemagick.sh  urls.txt
doc/: HW-ACCEL.md  INSTALL-LINUX.md  INSTALL-MAC.md  INSTALL-WINDOWS.md  OpenShotPlan.tjp  OpenShot_Phase1.tjp  OpenShot_Phase2.tjp  bugs.txt
doc/plan/: OpenShot_Phase2.tjp
examples/: CMakeLists.txt  Example.cpp  Example.py  Example.rb  ExampleBlackmagic.cpp  ExampleHtml.cpp  ExampleHtml.py  Example_opencv.cpp  OpenShot Wipe Tests.py  test.avi
examples/qt-demo/: main.cpp
external-effects/: CMakeLists.txt
external-effects/super-blur/: CMakeLists.txt  SuperBlur.cpp  SuperBlur.h
include/: AudioBufferSource.h  AudioDeviceInfo.h  AudioReaderSource.h  AudioResampler.h  CVObjectDetection.h  CVStabilization.h  CVTracker.h  Cache.h  CacheBase.h  CacheDisk.h  CacheMemory.h  Capture.h  ChannelLayouts.h  ChunkReader.h  ChunkWriter.h  Clip.h  ClipBase.h  ClipProcessingJobs.h  Color.h  Coordinate.h  CrashHandler.h  DecklinkCapture.h  DecklinkInput.h  DecklinkOutput.h  DecklinkReader.h  DecklinkWriter.h  DummyReader.h  EffectBase.h  EffectInfo.h  Effects.h  Enums.h  Exceptions.h  FFmpegReader.h  FFmpegUtilities.h  FFmpegWriter.h  FileReaderBase.h  FileWriterBase.h  Fraction.h  Frame.h  FrameMapper.h  (+35 more)
include/Qt/: AudioPlaybackThread.h  PlayerDemo.h  PlayerPrivate.h  VideoCacheThread.h  VideoPlaybackThread.h  VideoRenderWidget.h  player.h  (+5 more)
src/: AudioBufferSource.cpp  AudioBufferSource.h  AudioDeviceInfo.h  AudioDevices.cpp  AudioDevices.h  AudioLocation.h  AudioReaderSource.cpp  AudioReaderSource.h  AudioResampler.cpp  AudioResampler.h  AudioWaveformer.cpp  AudioWaveformer.h  CMakeLists.txt  CVObjectDetection.cpp  CVObjectDetection.h  CVStabilization.cpp  CVStabilization.h  CVTracker.cpp  CVTracker.h  Cache.cpp  CacheBase.cpp  CacheBase.h  CacheDisk.cpp  CacheDisk.h  CacheMemory.cpp  CacheMemory.h  Capture.cpp  ChannelLayouts.h  ChunkReader.cpp  ChunkReader.h  ChunkWriter.cpp  ChunkWriter.h  Clip.cpp  Clip.h  ClipBase.cpp  ClipBase.h  ClipProcessingJobs.cpp  ClipProcessingJobs.h  Color.cpp  Color.h  (+107 more)
src/Qt/: AudioPlaybackThread.cpp  AudioPlaybackThread.h  PlayerDemo.cpp  PlayerDemo.h  PlayerPrivate.cpp  PlayerPrivate.h  VideoCacheThread.cpp  VideoCacheThread.h  VideoPlaybackThread.cpp  VideoPlaybackThread.h  VideoRenderWidget.cpp  VideoRenderWidget.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp  main_player.cpp  playercontrols.cpp  playlistmodel.cpp  videoplayer.cpp  videowidget.cpp  videowidgetsurface.cpp
src/Qt/demo/: main.cpp
src/Qt/deprecated/: histogramwidget.cpp  player.cpp  videowidget.cpp
src/audio_effects/: Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Echo.cpp  Echo.h  Expander.cpp  Expander.h  Noise.cpp  Noise.h  ParametricEQ.cpp  ParametricEQ.h  Pitch.cpp  Pitch.h  Robotization.cpp  Robotization.h  STFT.cpp  STFT.h  Whisperization.cpp  Whisperization.h
src/bindings/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  CMakeLists.txt~  openshot.i
src/bindings/ruby/: CMakeLists.txt  CMakeLists.txt~  openshot.i
src/effects/: Bars.cpp  Bars.h  Blur.cpp  Blur.h  Brightness.cpp  Brightness.h  Caption.cpp  Caption.h  ChromaKey.cpp  ChromaKey.h  ColorShift.cpp  ColorShift.h  Crop.cpp  Crop.h  Deinterlace.cpp  Deinterlace.h  Hue.cpp  Hue.h  Mask.cpp  Mask.h  Negate.cpp  Negate.h  ObjectDetection.cpp  ObjectDetection.h  Pixelate.cpp  Pixelate.h  Saturation.cpp  Saturation.h  Shift.cpp  Shift.h  Stabilizer.cpp  Stabilizer.h  Tracker.cpp  Tracker.h  Wave.cpp  Wave.h  Wipe.cpp
src/examples/: CMakeLists.txt  Example.cpp  Example.py  Example.rb  ExampleBlackmagic.cpp  ExampleHtml.cpp  ExampleHtml.py  Example_FFmpeg.cpp  Example_ImageMagick.cpp  Example_Juce.cpp  Example_opencv.cpp  OpenShot Wipe Tests.py  test.py
src/juce/: OpenShotLibrary.jucer
src/juce/JuceLibraryCode/: AppConfig.h  JuceHeader.h
src/juce/Source/: Main.cpp
src/protobuf_messages/: CMakeLists.txt  compileProtobufMessages.sh  objdetectdata.proto  stabilizedata.proto  trackerdata.proto
src/sort_filter/: Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  sort.cpp  sort.hpp
tests/: AudioDeviceManager.cpp  AudioWaveformer.cpp  CMakeLists.txt  CVObjectDetection.cpp  CVObjectDetection_Tests.cpp  CVStabilizer.cpp  CVStabilizer_Tests.cpp  CVTracker.cpp  CVTracker_Tests.cpp  Cache.cpp  CacheDisk.cpp  CacheMemory.cpp  Cache_Tests.cpp  Caption.cpp  ChromaKey.cpp  Clip.cpp  Clip_Tests.cpp  Color.cpp  Color_Tests.cpp  Coordinate.cpp  Coordinate_Tests.cpp  Crop.cpp  DummyReader.cpp  DummyReader_Tests.cpp  DynamicEffects_Tests.cpp  FFmpegReader.cpp  FFmpegReader_Tests.cpp  FFmpegWriter.cpp  FFmpegWriter_Tests.cpp  FileReaderBase_Tests.cpp  Fraction.cpp  Fraction_Tests.cpp  Frame.cpp  FrameMapper.cpp  FrameMapper_Tests.cpp  FrameRate_Tests.cpp  Frame_Tests.cpp  ImageWriter.cpp  ImageWriter_Tests.cpp  KeyFrame.cpp  (+18 more)
tests/cppunittest/: FrameMapper_Tests.cpp  KeyFrame_Tests.cpp
(+22 files in other folders)
